homepage RWD alignment fix

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -111,10 +111,12 @@ body {
         -webkit-flex-direction: row;
             -ms-flex-direction: row;
                 flex-direction: row;
-        -webkit-justify-content: space-around;
-            -ms-flex-pack: distribute;
-                justify-content: space-around;
-        margin: 40px 0;
+        -webkit-box-pack: justify;
+        -webkit-justify-content: space-between;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        width: 90%;
+        margin: 40px auto;
         -webkit-box-ordinal-group: 5;
         -webkit-order: 4;
             -ms-flex-order: 4;
@@ -126,10 +128,12 @@ body {
         -webkit-flex-direction: row;
             -ms-flex-direction: row;
                 flex-direction: row;
-        -webkit-justify-content: space-around;
-            -ms-flex-pack: distribute;
-                justify-content: space-around;
-        margin: 40px 0;
+        -webkit-box-pack: justify;
+        -webkit-justify-content: space-between;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        margin: 40px auto;
+        width: 70%;
         -webkit-box-ordinal-group: 5;
         -webkit-order: 4;
             -ms-flex-order: 4;
@@ -399,13 +403,15 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
     width: 90%;
-    margin: 20px auto 20px 0; }
+    margin: 20px auto; }
     @media (min-width: 768px) and (max-width: 1023px) {
       .hero .left {
-        width: 50%; } }
+        width: 45%;
+        margin: 20px auto 20px 0; } }
     @media (min-width: 1024px) {
       .hero .left {
-        width: 40%; } }
+        width: 45%;
+        margin: 20px auto 20px 0; } }
     .hero .left .binoculars {
       display: block;
       margin: 40px auto;
@@ -442,19 +448,21 @@ body {
       padding: 10px 40px; }
   .hero .right {
     display: block;
-    margin: 20px 0 20px auto;
     padding: 10px;
     width: 90vw;
     border: 5px solid white;
-    max-width: 500px; }
+    max-width: 500px;
+    margin: 20px auto; }
     @media (min-width: 768px) and (max-width: 1023px) {
       .hero .right {
-        max-width: 40vw;
-        border-width: 10px; } }
+        max-width: 45vw;
+        border-width: 10px;
+        margin: 20px 0 20px auto; } }
     @media (min-width: 1024px) {
       .hero .right {
-        max-width: 40vw;
-        border-width: 10px; } }
+        max-width: 35vw;
+        border-width: 10px;
+        margin: 20px 0 20px auto; } }
     .hero .right .right-text {
       color: white;
       font-size: -webkit-calc(20px + 2vw);
@@ -464,8 +472,8 @@ body {
       margin-bottom: 20px; }
       @media (min-width: 768px) and (max-width: 1023px) {
         .hero .right .right-text {
-          font-size: -webkit-calc(25px + 2vw);
-          font-size: calc(25px + 2vw);
+          font-size: -webkit-calc(30px + 2vw);
+          font-size: calc(30px + 2vw);
           line-height: -webkit-calc(24px + 2vw);
           line-height: calc(24px + 2vw); } }
       @media (min-width: 1024px) {
@@ -514,13 +522,15 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
     width: 90%;
-    margin: 20px auto 20px 0; }
+    margin: 20px auto; }
     @media (min-width: 768px) and (max-width: 1023px) {
       .home-offers .home-handpicked-offers {
-        width: 45%; } }
+        width: 45%;
+        margin: 20px auto 20px 0; } }
     @media (min-width: 1024px) {
       .home-offers .home-handpicked-offers {
-        max-width: 45%; } }
+        max-width: 45%;
+        margin: 20px auto 20px 0; } }
     .home-offers .home-handpicked-offers .home-handpicked-offers-header {
       display: -webkit-box;
       display: -webkit-flex;
@@ -586,13 +596,15 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
     width: 90%;
-    margin: 20px 0 20px auto; }
+    margin: 20px auto; }
     @media (min-width: 768px) and (max-width: 1023px) {
       .home-offers .home-summer-destinations {
-        width: 45%; } }
+        width: 45%;
+        margin: 20px 0 20px auto; } }
     @media (min-width: 1024px) {
       .home-offers .home-summer-destinations {
-        width: 45%; } }
+        width: 45%;
+        margin: 20px 0 20px auto; } }
     .home-offers .home-summer-destinations .home-summer-destinations-header {
       display: -webkit-box;
       display: -webkit-flex;
