--- a/static/css/sass/partials/_header.scss
+++ b/static/css/sass/partials/_header.scss
@@ -1,7 +1,7 @@
 .header{
 
 	display: flex;
-			flex-direction: column;
+	flex-direction: column;
 
 	
 	.logo{
@@ -57,15 +57,17 @@
 
 		@include breakpoint($tablet){
 			flex-direction: row;
-			justify-content: space-around;
-			margin: 40px 0;
+			justify-content: space-between;
+			width: 90%;
+			margin: 40px auto;
 			order:4;
 		}
 
 		@include breakpoint($desktop){
 			flex-direction: row;
-			justify-content: space-around;
-			margin: 40px 0;
+			justify-content: space-between;
+			margin: 40px auto;
+			width: 70%;	
 			order:4;
 		}
 		.navbar-item{
