--- a/static/css/sass/partials/_home_offers.scss
+++ b/static/css/sass/partials/_home_offers.scss
@@ -18,15 +18,18 @@
 		display: flex;
 		flex-direction: column;
 		width: 90%;
-		margin: 20px auto 20px 0;
+		margin: 20px auto;
 
 		@include breakpoint($tablet){
-			width: 45%
-
+			width: 45%;
+			margin: 20px auto 20px 0;
+			
 		}
 
 		@include breakpoint($desktop){
 			max-width: 45%;
+			margin: 20px auto 20px 0;
+
 		}
 
 		.home-handpicked-offers-header{
@@ -98,14 +101,17 @@
 		display: flex;
 		flex-direction: column;
 		width: 90%;
-		margin: 20px 0 20px auto;
+		margin: 20px auto;
 
 		@include breakpoint($tablet){
-			width: 45%
+			width: 45%;
+			margin: 20px 0 20px auto;
+
 		}
 
 		@include breakpoint($desktop){
 			width: 45%;
+			margin: 20px 0 20px auto;			
 		}
 
 		.home-summer-destinations-header{
